fix: fix sos_post update API error
